Update to my enviroment; ssh removed; docker-compose added

--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -19,8 +19,8 @@ defaults
     errorfile 504 /etc/haproxy/errors/504.http
 
 backend farming-simulator-web
-    server farming-simulator-web 127.0.0.1:8080
+    server farming-simulator-web 127.0.0.1:1050
 
 frontend farming-simulator-web
-    bind 0.0.0.0:80
+    bind *:80
     default_backend farming-simulator-web
