--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -4,9 +4,10 @@ global
     group   haproxy
 
 defaults
-    mode    http
-    option  httplog
-    option  dontlognull
+    mode http
+    option httplog
+    option dontlognull
+    option forwardfor
     timeout connect 5000
     timeout client  50000
     timeout server  50000
@@ -18,9 +19,9 @@ defaults
     errorfile 503 /etc/haproxy/errors/503.http
     errorfile 504 /etc/haproxy/errors/504.http
 
+frontend farming-simulator-web
+    bind :80
+    default_backend farming-simulator-web
+
 backend farming-simulator-web
     server farming-simulator-web 127.0.0.1:1050
-
-frontend farming-simulator-web
-    bind *:80
-    default_backend farming-simulator-web
